organized ready for new topics

--- a/analysis/individual_between_models/summary_for_VJ/summary_organized.Rmd
+++ b/analysis/individual_between_models/summary_for_VJ/summary_organized.Rmd
@@ -1,10 +1,12 @@
 ---
 title: "Summary of Results"
 date: "April 10, 2019"
+# output: html_document
 output:
   rmdformats::html_clean:
     highlight: kate
 code_folding: hide
+#  runtime: shiny
 ---
 
 ```{r knitr_init, echo=FALSE, cache=FALSE, message=FALSE, warning=FALSE}
@@ -36,10 +38,23 @@ Explanatory variables:
 ##  Variables to Include in Analysis
 
 ```{r}
+# econ <- read.csv("../../../pulling_data/merged_data.csv", stringsAsFactors=FALSE, header=TRUE)
+  ## comp1 <- read.csv("./tickers_wo_dollars.txt", header = TRUE, sep = "|", stringsAsFactors = FALSE)
+  ## comp1 <- data.frame(comp1$Symbol, comp1$Security.Name, stringsAsFactors = FALSE)
+  ## names(comp1) <- c("symbol", "name")
+## inputPanel({
 
-vars <- c("BN.CAB.XOKA.GD.ZS", "NY.GDP.PCAP.KD.ZG")
+##      shiny::checkboxGroupInput("vars_include", "Explanatory Variables:",
+##                            names(econ), selected = names(econ))
+
+##     vars <<- input$vars_include
+
+vars <- c("BN.CAB.XOKA.GD.ZS.x", "NY.GDP.PCAP.KD.ZG")
 
 form <- as.formula(paste("lhs ~", paste(vars, collapse="+")))
+
+# })
+
 
 ```
 
@@ -51,7 +66,7 @@ form <- as.formula(paste("lhs ~", paste(vars, collapse="+")))
 #. Run for all topics.
 
 
-# Count Results by Topic
+# Results by Topic
 
 ## External Debt 
 
@@ -63,6 +78,7 @@ form <- as.formula(paste("lhs ~", paste(vars, collapse="+")))
 mentions <- read.csv("../../raw_exp.txt", stringsAsFactors=FALSE, header=TRUE)
 mentions$Topic <- gsub(",", "", mentions$Topic)
 names(mentions)[1]  <- "Country"
+names(mentions)[4] <- "lhs"
 
 mentionsED <- mentions[mentions$Topic == "External Debt", ]
 
@@ -77,7 +93,7 @@ mentionsED$mentionsEDindex <- gsub(" ", "", mentionsED$mentionsEDindex)
 
 econ <- read.csv("../../../pulling_data/merged_data.csv", stringsAsFactors=FALSE, header=TRUE)
 
-econ_vars_for_model <- econ[, vars]
+econ_vars_for_model <- econ[, c("country", "year", vars)]
 
 ## want to add: "FP.CPI.TOTL.ZG", "SL.UEM.TOTL.ZS", "IT.NET.USER.ZS",
 
@@ -94,7 +110,7 @@ econ_vars_for_model <- subset(econ_vars_for_model, !duplicated(econ_vars_for_mod
 
 mergedMentionsED <- merge(mentionsED, econ_vars_for_model, by.x = "mentionsEDindex", by.y = "econVarsIndex")
 
-mergedMentionsED <- mergedMentionsED[, c("Country", "Year", "lhs", vars)]
+mergedMentionsED <- mergedMentionsED[, c("Country", "Year", "lhs", c(vars))]
 
 mergedMentionsED <- mergedMentionsED[complete.cases(mergedMentionsED), ]
 
@@ -102,7 +118,7 @@ mergedMentionsED <- mergedMentionsED[complete.cases(mergedMentionsED), ]
 
 mergedMentionsED_p <- pdata.frame(mergedMentionsED, index = c("Country", "Year"), drop.index=TRUE, row.names=TRUE)
 
-FEestimate <- plm(lhs ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedMentionsED_p, model = "between", effect = "individual")
+FEestimate <- plm(form, data = mergedMentionsED_p, model = "between", effect = "individual")
 
 stargazer(FEestimate, type="html")
 
@@ -115,6 +131,7 @@ stargazer(FEestimate, type="html")
 recs <- read.csv("../../rec_exp.txt", stringsAsFactors=FALSE, header=TRUE)
 recs$Topic <- gsub(",", "", recs$Topic)
 names(recs)[1]  <- "Country"
+names(recs)[4]  <- "lhs"
 
 recsED <- recs[recs$Topic == "External Debt", ]
 
@@ -159,112 +176,6 @@ stargazer(FEestimate, type="html")
 
 ```
 
-## Financial/Monetary
-
-### Mentions
-
-```{r results='asis'}
-mentions <- read.csv("../../raw_exp.txt", stringsAsFactors=FALSE, header=TRUE)
-mentions$Topic <- gsub(",", "", mentions$Topic)
-names(mentions)[1]  <- "Country"
-
-mentionsED <- mentions[mentions$Topic == "Financial/Monetary", ]
-
-## make sure each row is unique----
-
-mentionsEDindex <- paste0(mentionsED$Country, "_", mentionsED$Year)
-
-mentionsED <- cbind(mentionsEDindex, mentionsED)
-mentionsED$mentionsEDindex <- gsub(" ", "", mentionsED$mentionsEDindex)
-
-## Merge with IMF/WB Data-------
-
-econ <- read.csv("../../../pulling_data/merged_data.csv", stringsAsFactors=FALSE, header=TRUE)
-
-econ_vars_for_model <- econ[, c("country", "year", vars)]
-
-## now need to extract only unique country and year subsets-----
-
-econVarsIndex <- paste0(econ_vars_for_model$country, "_", econ_vars_for_model$year)
-
-econ_vars_for_model <- cbind(econVarsIndex, econ_vars_for_model)
-
-econ_vars_for_model <- subset(econ_vars_for_model, !duplicated(econ_vars_for_model$econVarsIndex))
-
-#### Join data-----
-
-mergedMentionsED <- merge(mentionsED, econ_vars_for_model, by.x = "mentionsEDindex", by.y = "econVarsIndex")
-
-mergedMentionsED <- mergedMentionsED[, c("Country", "Year", "Mentions", vars)]
-
-mergedMentionsED <- mergedMentionsED[complete.cases(mergedMentionsED), ]
-
-## convert to plm
-
-mergedMentionsED_p <- pdata.frame(mergedMentionsED, index = c("Country", "Year"), drop.index=TRUE, row.names=TRUE)
-
-FEestimate <- plm(Mentions ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedMentionsED_p, model = "between", effect = "individual")
-
-stargazer(FEestimate, type="html")
-
-```
-
-
-### Recommendations
-
-
-```{r results='asis'}
-recs <- read.csv("../../rec_exp.txt", stringsAsFactors=FALSE, header=TRUE)
-recs$Topic <- gsub(",", "", recs$Topic)
-names(recs)[1]  <- "Country"
-
-recsED <- recs[recs$Topic == "Financial/Monetary", ]
-
-## make sure each row is unique----
-
-theIndex <- paste0(recsED$Country, "_", recsED$Year)
-
-recsED <- cbind(theIndex, recsED)
-recsED$theIndex <- gsub(" ", "", recsED$theIndex)
-rm(theIndex)
-
-## Merge with IMF/WB Data-------
-
-econ <- read.csv("../../../pulling_data/merged_data.csv", stringsAsFactors=FALSE, header=TRUE)
-
-econ_vars_for_model <- econ[, c("country", "year", vars)]
-
-## now need to extract only unique country and year subsets-----
-
-theIndex <- paste0(econ_vars_for_model$country, "_", econ_vars_for_model$year)
-
-econ_vars_for_model <- cbind(theIndex, econ_vars_for_model)
-
-econ_vars_for_model <- subset(econ_vars_for_model, !duplicated(econ_vars_for_model$theIndex))
-
-
-#### Join data-----
-
-mergedRecsED <- merge(recsED, econ_vars_for_model, by = "theIndex")
-
-mergedRecsED <- mergedRecsED[, c("Country", "Year", "Recommendations", vars)]
-
-mergedRecsED <- mergedRecsED[complete.cases(mergedRecsED), ]
-
-## convert to plm
-
-mergedRecsED_p <- pdata.frame(mergedRecsED, index = c("Country", "Year"), drop.index=TRUE, row.names=TRUE)
-
-FEestimate <- plm(Recommendations ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedRecsED_p, model = "between", effect = "individual")
-
-stargazer(FEestimate, type="html")
-
-```
-
-# Scaled Results by Topic
-
-## External Debt
-
 ### Scaled Mentions
 
 ```{r results='asis'}
@@ -279,7 +190,7 @@ names(mentions)[1]  <- "Country"
 
 mentions <- mentions %>%
     group_by(Country, Year) %>%
-    mutate(scaled = Mentions / sum(Mentions))
+    mutate(lhs = Mentions / sum(Mentions))
 
 mentionsED <- mentions[mentions$Topic == "External Debt", ]
 
@@ -309,7 +220,7 @@ econ_vars_for_model <- subset(econ_vars_for_model, !duplicated(econ_vars_for_mod
 
 mergedMentionsED <- merge(mentionsED, econ_vars_for_model, by.x = "mentionsEDindex", by.y = "econVarsIndex")
 
-mergedMentionsED <- mergedMentionsED[, c("Country", "Year", "Mentions", "scaled", vars)]
+mergedMentionsED <- mergedMentionsED[, c("Country", "Year", "Mentions", "lhs", vars)]
 
 mergedMentionsED <- mergedMentionsED[complete.cases(mergedMentionsED), ]
 
@@ -317,7 +228,7 @@ mergedMentionsED <- mergedMentionsED[complete.cases(mergedMentionsED), ]
 
 mergedMentionsED_p <- pdata.frame(mergedMentionsED, index = c("Country", "Year"), drop.index=TRUE, row.names=TRUE)
 
-FEestimate <- plm(scaled ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedMentionsED_p, model = "between", effect = "individual")
+FEestimate <- plm(lhs ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedMentionsED_p, model = "between", effect = "individual")
 
 stargazer(FEestimate, type="html")
 
@@ -334,7 +245,7 @@ names(recs)[1]  <- "Country"
 
 recs <- recs %>%
     group_by(Country, Year) %>%
-    mutate(scaled = Recommendations / sum(Recommendations))
+    mutate(lhs = Recommendations / sum(Recommendations))
 
 
 recsED <- recs[recs$Topic == "External Debt", ]
@@ -369,7 +280,7 @@ econ_vars_for_model <- subset(econ_vars_for_model, !duplicated(econ_vars_for_mod
 
 mergedRecsED <- merge(recsED, econ_vars_for_model, by = "theIndex")
 
-mergedRecsED <- mergedRecsED[, c("Country", "Year", "Recommendations", "scaled", vars)]
+mergedRecsED <- mergedRecsED[, c("Country", "Year", "Recommendations", "lhs", vars)]
 
 mergedRecsED <- mergedRecsED[complete.cases(mergedRecsED), ]
 
@@ -377,12 +288,116 @@ mergedRecsED <- mergedRecsED[complete.cases(mergedRecsED), ]
 
 mergedRecsED_p <- pdata.frame(mergedRecsED, index = c("Country", "Year"), drop.index=TRUE, row.names=TRUE)
 
-FEestimate <- plm(scaled ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedRecsED_p, model = "between", effect = "individual")
+FEestimate <- plm(lhs ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedRecsED_p, model = "between", effect = "individual")
 
 stargazer(FEestimate, type="html")
 
 ```
+
+
 ## Financial/Monetary
+
+### Mentions
+
+```{r results='asis'}
+mentions <- read.csv("../../raw_exp.txt", stringsAsFactors=FALSE, header=TRUE)
+mentions$Topic <- gsub(",", "", mentions$Topic)
+names(mentions)[1]  <- "Country"
+names(mentions)[4]  <- "lhs"
+
+mentionsED <- mentions[mentions$Topic == "Financial/Monetary", ]
+
+## make sure each row is unique----
+
+mentionsEDindex <- paste0(mentionsED$Country, "_", mentionsED$Year)
+
+mentionsED <- cbind(mentionsEDindex, mentionsED)
+mentionsED$mentionsEDindex <- gsub(" ", "", mentionsED$mentionsEDindex)
+
+## Merge with IMF/WB Data-------
+
+econ <- read.csv("../../../pulling_data/merged_data.csv", stringsAsFactors=FALSE, header=TRUE)
+
+econ_vars_for_model <- econ[, c("country", "year", vars)]
+
+## now need to extract only unique country and year subsets-----
+
+econVarsIndex <- paste0(econ_vars_for_model$country, "_", econ_vars_for_model$year)
+
+econ_vars_for_model <- cbind(econVarsIndex, econ_vars_for_model)
+
+econ_vars_for_model <- subset(econ_vars_for_model, !duplicated(econ_vars_for_model$econVarsIndex))
+
+#### Join data-----
+
+mergedMentionsED <- merge(mentionsED, econ_vars_for_model, by.x = "mentionsEDindex", by.y = "econVarsIndex")
+
+mergedMentionsED <- mergedMentionsED[, c("Country", "Year", "lhs", vars)]
+
+mergedMentionsED <- mergedMentionsED[complete.cases(mergedMentionsED), ]
+
+## convert to plm
+
+mergedMentionsED_p <- pdata.frame(mergedMentionsED, index = c("Country", "Year"), drop.index=TRUE, row.names=TRUE)
+
+FEestimate <- plm(lhs ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedMentionsED_p, model = "between", effect = "individual")
+
+stargazer(FEestimate, type="html")
+
+```
+
+
+### Recommendations
+
+
+```{r results='asis'}
+recs <- read.csv("../../rec_exp.txt", stringsAsFactors=FALSE, header=TRUE)
+recs$Topic <- gsub(",", "", recs$Topic)
+names(recs)[1]  <- "Country"
+names(recs)[4]  <- "lhs"
+
+recsED <- recs[recs$Topic == "Financial/Monetary", ]
+
+## make sure each row is unique----
+
+theIndex <- paste0(recsED$Country, "_", recsED$Year)
+
+recsED <- cbind(theIndex, recsED)
+recsED$theIndex <- gsub(" ", "", recsED$theIndex)
+rm(theIndex)
+
+## Merge with IMF/WB Data-------
+
+econ <- read.csv("../../../pulling_data/merged_data.csv", stringsAsFactors=FALSE, header=TRUE)
+
+econ_vars_for_model <- econ[, c("country", "year", vars)]
+
+## now need to extract only unique country and year subsets-----
+
+theIndex <- paste0(econ_vars_for_model$country, "_", econ_vars_for_model$year)
+
+econ_vars_for_model <- cbind(theIndex, econ_vars_for_model)
+
+econ_vars_for_model <- subset(econ_vars_for_model, !duplicated(econ_vars_for_model$theIndex))
+
+
+#### Join data-----
+
+mergedRecsED <- merge(recsED, econ_vars_for_model, by = "theIndex")
+
+mergedRecsED <- mergedRecsED[, c("Country", "Year", "lhs", vars)]
+
+mergedRecsED <- mergedRecsED[complete.cases(mergedRecsED), ]
+
+## convert to plm
+
+mergedRecsED_p <- pdata.frame(mergedRecsED, index = c("Country", "Year"), drop.index=TRUE, row.names=TRUE)
+
+FEestimate <- plm(lhs ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedRecsED_p, model = "between", effect = "individual")
+
+stargazer(FEestimate, type="html")
+
+```
 
 ### Scaled Mentions
 
@@ -400,7 +415,7 @@ library(dplyr)
 
 mentions <- mentions %>%
     group_by(Country, Year) %>%
-    mutate(scaled = Mentions / sum(Mentions))
+    mutate(lhs = Mentions / sum(Mentions))
 
 mentionsED <- mentions[mentions$Topic == "Financial/Monetary", ]
 
@@ -429,7 +444,7 @@ econ_vars_for_model <- subset(econ_vars_for_model, !duplicated(econ_vars_for_mod
 
 mergedMentionsED <- merge(mentionsED, econ_vars_for_model, by.x = "mentionsEDindex", by.y = "econVarsIndex")
 
-mergedMentionsED <- mergedMentionsED[, c("Country", "Year", "Mentions", "scaled", vars)]
+mergedMentionsED <- mergedMentionsED[, c("Country", "Year", "Mentions", "lhs", vars)]
 
 mergedMentionsED <- mergedMentionsED[complete.cases(mergedMentionsED), ]
 
@@ -437,7 +452,7 @@ mergedMentionsED <- mergedMentionsED[complete.cases(mergedMentionsED), ]
 
 mergedMentionsED_p <- pdata.frame(mergedMentionsED, index = c("Country", "Year"), drop.index=TRUE, row.names=TRUE)
 
-FEestimate <- plm(scaled ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedMentionsED_p, model = "between", effect = "individual")
+FEestimate <- plm(lhs ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedMentionsED_p, model = "between", effect = "individual")
 
 stargazer(FEestimate, type = "html")
 
@@ -457,7 +472,7 @@ library(dplyr)
 
 recs <- recs %>%
     group_by(Country, Year) %>%
-    mutate(scaled = Recommendations / sum(Recommendations))
+    mutate(lhs = Recommendations / sum(Recommendations))
 
 
 recsED <- recs[recs$Topic == "Financial/Monetary", ]
@@ -491,7 +506,7 @@ econ_vars_for_model <- subset(econ_vars_for_model, !duplicated(econ_vars_for_mod
 
 mergedRecsED <- merge(recsED, econ_vars_for_model, by = "theIndex")
 
-mergedRecsED <- mergedRecsED[, c("Country", "Year", "Recommendations", "scaled", vars)]
+mergedRecsED <- mergedRecsED[, c("Country", "Year", "Recommendations", "lhs", vars)]
 
 mergedRecsED <- mergedRecsED[complete.cases(mergedRecsED), ]
 
@@ -499,8 +514,9 @@ mergedRecsED <- mergedRecsED[complete.cases(mergedRecsED), ]
 
 mergedRecsED_p <- pdata.frame(mergedRecsED, index = c("Country", "Year"), drop.index=TRUE, row.names=TRUE)
 
-FEestimate <- plm(scaled ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedRecsED_p, model = "between", effect = "individual")
+FEestimate <- plm(lhs ~  BN.CAB.XOKA.GD.ZS.x + NY.GDP.PCAP.KD.ZG, data = mergedRecsED_p, model = "between", effect = "individual")
 
 stargazer(FEestimate, type = "html")
 
 ```
+
